--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
-     <title>Hello World</title>
+    <meta charset="UTF-8">
+    <title>Hello World</title>
 </head>
-<body>
-<h1>HELLO WORLD</h1>
+<body style="background-color:powderblue;">
+
+<img src="https://avatars1.githubusercontent.com/u/25084478?v=3&u=ae3c1914f62f1c049b25dab5791d2478df394fe4&s=400g" align="right">
+
+<h1>Welcome to my first website!</h1>
+    <h2>Things I want to add to my website:</h2>
+        <ol>
+            <li>More pages</li>
+            <li>Graphics and images</li>
+            <li>Information about myself</li>
+            <li>Links to interesting sites</li>
+            <li>Games to play</li>
+        </ol>
 </body>
 </html>
