--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <img src="https://avatars1.githubusercontent.com/u/25084478?v=3&u=ae3c1914f62f1c049b25dab5791d2478df394fe4&s=400g" align="right">
 
-<h1>Welcome to my first website!</h1>
+<h1 style="color:yellow;">Welcome to my first website!</h1>
     <h2 style="color:red;">Things I want to add to my website:</h2>
         <ol>
             <li>More pages</li>
