My first changes in my local system

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <h1 style="color:yellow;">Welcome to my first website!</h1>
     <h2 style="color:red;">Things I want to add to my website:</h2>
+	<h2 style="color:white;">I've made a few changes to my site :P</h2>
         <ol>
             <li>More pages</li>
             <li>Graphics and images</li>
