adding second page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             <li>Links to interesting sites</li>
             <li>Games to play</li>
         </ol>
+<div><a href="page2.html">See my second page</a></div>
 </body>
 </html>
