--- a/fields.html
+++ b/fields.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Web Development</title>
+    <title>Fields</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Becoming a Web Developer
+                <h1 class="page-header">Web Developer Fields
                     <small></small>
                 </h1>
             </div>
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/banner.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/webdev.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Welcome to becoming a web developer. The goal of this website is to give you, yes YOU a first hand top down look at the core aspects of entering this challenging and satisfying field. Here you will find information on the different jobs a web developer may undertake as well as the core programming/scripting languages that one would need to know to enter this field. I will also provide information on verious online tools and web hosting options that can make your entry into this field a lot smoother. Enjoy! :) </p>
+                <h3>Front End Developer</h3>
+                <p>A front end web developer refers to the person who designs the look of the website and everything the user who visits the website will see. Front end developers will need to be fluent in html, css, and javascript. </p>
             </div>
 
         </div>
@@ -98,25 +98,31 @@
                 <h3 class="page-header"></h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="fields.html">
                     <img class="img-responsive portfolio-item" src="img/webdev.jpg" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-2 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-2 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
                 </a>
