--- a/hosting.html
+++ b/hosting.html
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/webdev.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/free.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>Free Hosting</h3>
-                <p>text goes here</p>
+                <p>Free hosting is just as the name implies, servers that offer free and usually quite limited hosting to users without any costs. These hosts are a great way to get yourself up and running in the web developement world and get some real practice getting your pages hosted.</p>
             </div>
 
         </div>
@@ -100,7 +100,7 @@
 
             <div class="col-sm-2 col-xs-6">
                 <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/webdev.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/free.jpg" alt="">
                 </a>
             </div>
 
