--- a/lang.html
+++ b/lang.html
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/webdev.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/html.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>HTML</h3>
-                <p>text goes here </p>
+                <p>HTML is the backbone of websites, without it, a website could do nothing. Understanding and mastering HTML is essential for any web developer in training as you will no doubt be using it daily.</p>
             </div>
 
         </div>
@@ -100,7 +100,7 @@
 
             <div class="col-sm-2 col-xs-6">
                 <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/webdev.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/html.jpg" alt="">
                 </a>
             </div>
 
