--- a/tools.html
+++ b/tools.html
@@ -80,12 +80,12 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="img/webdev.jpg" alt="THE WEB">
+                <img class="img-responsive" src="img/github.jpg" alt="THE WEB">
             </div>
 
             <div class="col-md-4">
                 <h3>Github</h3>
-                <p>text goes here </p>
+                <p>Github is an online site that offers free version control for open source projects so developers and work together to create a mutual project.</p>
             </div>
 
         </div>
@@ -100,7 +100,7 @@
 
             <div class="col-sm-2 col-xs-6">
                 <a href="fields.html">
-                    <img class="img-responsive portfolio-item" src="img/webdev.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="img/github.jpg" alt="">
                 </a>
             </div>
 
